--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@opentelemetry/sdk-trace-web": "^1.21.0",
     "@opentelemetry/semantic-conventions": "^1.21.0",
     "bootstrap": "^5.3.2",
+    "how-i-built-this": "^0.0.0-testing",
     "next": "14.1.0",
     "react": "^18",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
     "server-only": "^0.0.1"
   },
