--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@opentelemetry/sdk-trace-web": "^1.21.0",
     "@opentelemetry/semantic-conventions": "^1.21.0",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "how-i-built-this": "^0.0.0-testing",
     "next": "14.1.0",
     "react": "^18",
